--- a/DailyPlannerService/src/main/resources/templates/about.html
+++ b/DailyPlannerService/src/main/resources/templates/about.html
@@ -40,7 +40,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container-fluid">
-			<a class="navbar-brand" th:href="@{/index}" style="color: #F78888;"><b>Daily Planner System</b></a>
+			<a class="navbar-brand" th:href="@{/index}" style="color: white;"><b>Daily Planner System</b></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
 				style="color: ghostwhite;">
@@ -49,10 +49,10 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" th:href="@{/register}"><b>Register</b></a>
+						<a class="nav-link active" aria-current="page" th:href="@{/register}">Register</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" th:href="@{/login}"><b>Login</b></a>
+						<a class="nav-link active" aria-current="page" th:href="@{/login}">Login</a>
 					</li>
 
 				</ul>
@@ -63,11 +63,17 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" th:href="@{/contact}"><b>Contact</b></a>
+					<a class="nav-link active" aria-current="page" th:href="@{/contact}">Contact</a>
 				</li>
 			</ul>
 		</div>
-
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<li class="nav-item">
+					<a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
+				</li>
+			</ul>
+		</div>
 
 
 	</nav>
