--- a/DailyPlannerService/src/main/resources/templates/change-password.html
+++ b/DailyPlannerService/src/main/resources/templates/change-password.html
@@ -44,6 +44,13 @@
 				</ul>
 			</div>
 		</div>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<li class="nav-item">
+					<a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
+				</li>
+			</ul>
+		</div>
 	</nav>
 	<br /><br /><br />
 	<div class="container">
