--- a/DailyPlannerService/src/main/resources/templates/index.html
+++ b/DailyPlannerService/src/main/resources/templates/index.html
@@ -43,13 +43,13 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" th:href="@{/register}"><b>Register</b></a>
+						<a class="nav-link active" aria-current="page" th:href="@{/register}">Register</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" th:href="@{/login}"><b>Login</b></a>
+						<a class="nav-link active" aria-current="page" th:href="@{/login}">Login</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" th:href="@{/about}"><b>About</b></a>
+						<a class="nav-link active" aria-current="page" th:href="@{/about}">About</a>
 					</li>
 				</ul>
 			</div>
@@ -59,7 +59,7 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" th:href="@{/contact}"><b>Contact</b></a>
+					<a class="nav-link active" aria-current="page" th:href="@{/contact}">Contact</a>
 				</li>
 			</ul>
 		</div>
