--- a/DailyPlannerService/src/main/resources/templates/contact.html
+++ b/DailyPlannerService/src/main/resources/templates/contact.html
@@ -32,7 +32,11 @@
 					<li class="nav-item">
 						<a class="nav-link active" aria-current="page" th:href="@{/login}">Login</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" th:href="@{/about}">About</a>
+					</li>
 				</ul>
+
 			</div>
 
 		</div>
@@ -44,7 +48,7 @@
 			</ul>
 		</div>
 	</nav>
-	<br /><br /><br />
+
 	<div class="container">
 		<div class="row col-md-8 offset-md-2">
 			<div class="card">
