--- a/DailyPlannerService/src/main/resources/templates/user-todo.html
+++ b/DailyPlannerService/src/main/resources/templates/user-todo.html
@@ -14,6 +14,15 @@
 		body {
 			background-color: #86B3D1
 		}
+
+		#footer {
+			position: fixed;
+			padding: 10px 10px 0px 10px;
+			bottom: 0;
+			width: 100%;
+			/* Height of the footer*/
+			height: 80px;
+		}
 	</style>
 </head>
 
@@ -75,29 +84,32 @@
 	</div>
 
 
-	<footer class="footer-distributed">
 
-		<div class="footer-right">
-			<center>
-				<p class="footer-company-about">
+	<div id="footer">
+		<footer class="footer-distributed">
 
-					<strong>Become focused, organized, and calm with Daily
-						Planner.</strong> <br>The world’s #1 task manager and to-do list app
+			<div class="footer-right">
+				<center>
+					<p class="footer-company-about">
 
-				</p>
-			</center>
-		</div>
+						<strong>Become focused, organized, and calm with Daily
+							Planner.</strong> <br>The world’s #1 task manager and to-do list app
 
-		<div class="footer-left">
+					</p>
+				</center>
+			</div>
 
-			<center>
-				<p class="footer-company-name">
-					Copyright © 2023 <strong>Nikita Jawali. </strong>All rights reserved
-				</p>
-			</center>
-		</div>
+			<div class="footer-left">
 
-	</footer>
+				<center>
+					<p class="footer-company-name">
+						Copyright © 2023 <strong>Nikita Jawali. </strong>All rights reserved
+					</p>
+				</center>
+			</div>
+
+		</footer>
+	</div>
 
 </body>
 
